--- a/sample/src/main/res/layout/activity_main2.xml
+++ b/sample/src/main/res/layout/activity_main2.xml
@@ -10,6 +10,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="start"
         android:onClick="start"/>
 
 </android.support.constraint.ConstraintLayout>
